<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/et1_String"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/et2_String"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num1" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num2">

        <RadioButton
            android:id="@+id/rb_sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbSumar_String"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbRestar_String"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbMultiplicar_String"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbDividir_String"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/tvResultado_String"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:onClick="Calcular"
        android:text="@string/btCalcular_String"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:onClick="Limpiar"
        android:text="@string/btLimpiar_String"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnCalcular"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
</androidx.constraintlayout.widget.ConstraintLayout>